# juliacn2022

./: .gitignore  LICENSE  Manifest.toml  Project.toml  README.md
extern call/: test.jl
extern call/c/: kit.c
extern call/c++/: CMakeLists.txt  build.jl  kit.cpp
extern call/fortran/: foo.mod  kit.f90
notebook/: ChatGPT.ipynb  config.txt  solver.ipynb
particle/: plot.jl
